# lqbx

./: .env-example  404.html  README.md  case_1.py  case_2.py  case_3.py  database.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt
details/: index.html
docs/: details.md  index.md  sobre.md  usage.md
search/: search_index.json
sobre/: index.html
usage/: index.html
