[tool.poetry]
name = "looqbox"
version = "0.1.0"
description = ""
authors = ["Herbert Souto <herbert-93@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^9.1.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
python-dotenv = "^1.0.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.41"
pymdown-extensions = "^10.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
